--- a/config/config.json
+++ b/config/config.json
@@ -1,15 +1,15 @@
 {
   "development": {
     "username": "root",
-    "password": "aegs0511",
+    "password": "1234Asdf!",
     "database": "lazyCupboard_db",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "password",
-    "database": "testdb",
+    "password": "1234Asdf!",
+    "database": "lazyCupboard_db",
     "host": "localhost",
     "dialect": "mysql",
     "logging": false
