ingredients updating dynamically at front end

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "xm4bwaqu",
+    "password": "aegs0511",
     "database": "lazyCupboard_db",
     "host": "localhost",
     "dialect": "mysql"
