--- a/config/config.json
+++ b/config/config.json
@@ -1,15 +1,14 @@
 {
   "development": {
     "username": "root",
-    "password": "aegs0511",
-
-    "database": "lazyCupboard_db",
+    "password": "password",
+    "database": "lazycupboard_db",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "aegs0511",
+    "password": "password",
     "database": "testdb",
     "host": "localhost",
     "dialect": "mysql",
