Updated ingredient API to save a single name from the ingredient label being returned

--- a/config/config.json
+++ b/config/config.json
@@ -1,15 +1,14 @@
 {
   "development": {
     "username": "root",
-    "password": "aegs0511",
-
+    "password": "passwordpassword",
     "database": "lazyCupboard_db",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "aegs0511",
+    "password": "passwordpassword",
     "database": "testdb",
     "host": "localhost",
     "dialect": "mysql",
