--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
         "eqeqeq": "error",
         "no-empty-function": "error",
         "no-multi-spaces": "error",
-        "no-unused-vars": "error",
+        // "no-unused-vars": "error",
         "camelcase": "error",
         "indent": [
             "error",
