--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.2",
-    "mocha": "^5.2.0",
-    "prettier": "^1.13.7"
+    "mocha": "^5.2.0"
   }
 }
