--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "fix": "eslint --fix .",
     "test": "npm run lint && NODE_ENV=test mocha -u tdd --reporter spec --exit"
   },
+  "lint-staged": {
+    "linters": {
+      "*.{js,scss}": [
+        "some command",
+        "git add"
+      ]
+    },
+    "ignore": [
+      "**/dist/*.min.js"
+    ]
+  },
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
@@ -23,6 +34,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "prettier": "^1.16.3",
     "sequelize": "^4.38.0"
   },
   "devDependencies": {
@@ -31,6 +43,8 @@
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.2",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.2",
     "mocha": "^5.2.0"
   }
 }
