--- a/package.json
+++ b/package.json
@@ -47,5 +47,10 @@
     "husky": "^1.3.1",
     "lint-staged": "^8.1.2",
     "mocha": "^5.2.0"
+  },
+  "husky": {
+    "lint-staged": {
+      "pre-commit": "npm run fix"
+    }
   }
 }
