--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@types/date-fns": "^2.6.0",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "date-fns": "^1.30.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
